<resources>
    <string name="app_name">myTarget Demo</string>
    <string name="standard_banners">Banners</string>
    <string name="interstitial_ads">Interstitial</string>
    <string name="native_ads">Native Ads</string>
    <string name="native_ads_configuration">Native Ad configurations</string>
    <string name="native_banner_ads">Native Banner Ads</string>
    <string name="instream_ads">InStream</string>
    <string name="audio_instream_ads">Audio InStream</string>

    <string name="standard_banners_desc">320x50 and 300x250 banners</string>
    <string name="interstitial_ads_desc">Fullscreen banners</string>
    <string name="native_ads_desc">Advertisement inside app\'s content</string>
    <string name="native_ads_configuration_desc">Native Ad AdChoices configurations</string>
    <string name="native_banner_ads_desc">Compact advertisement inside app\'s content</string>
    <string name="instream_ads_desc">Advertisement inside video stream</string>
    <string name="audio_instream_ads_desc">Advertisement audio inStream</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="add_ad_title">Select ad type and enter slot id.</string>

    <string name="adtype_banner_320x50">Banner 320x50</string>
    <string name="adtype_banner_300x250">Banner 300x250</string>
    <string name="adtype_native">Native ad</string>
    <string name="adtype_native_configurations">Native ad configurations</string>
    <string name="adtype_native_banner">Native Banner ad</string>
    <string name="adtype_banner_728x90_dis">Banner 728x90 (tablets only)</string>
    <string name="adtype_banner_adaptive_dis">Adaptive size</string>
    <string name="banner_size">Banner size</string>
    <string name="_320x50">320x50</string>
    <string name="_300x250">300x250</string>
    <string name="_728x90">728x90 (tablets)</string>
    <string name="show">Show</string>
    <string name="interstitial_type">Interstitial type</string>
    <string name="static_promo">Static promo</string>
    <string name="promo_video">Video promo</string>
    <string name="video_black_theme">Video</string>
    <string name="black_theme_with_vast_video">VAST video</string>
    <string name="image_only">Image</string>
    <string name="carousel">Carousel</string>
    <string name="show_interstitial">Show</string>
    <string name="n_a">N/A</string>

    <string name="lorem">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur</string>
    <string name="load">Load</string>
    <string name="native_content">Native content</string>
    <string name="none">None</string>
    <string name="video">Video</string>
    <string name="instream_params">Instream params</string>
    <string name="fullscreen">Fullscreen</string>
    <string name="quality">Quality</string>
    <string name="timeout">Timeout</string>
    <string name="current_ad_params">Current ad params</string>
    <string name="duration">Duration</string>
    <string name="position">Position</string>
    <string name="dimensions">Dimensions</string>
    <string name="closedelay">CloseDelay</string>
    <string name="allow_close">Allow close</string>
    <string name="has_pause">Has pause</string>
    <string name="allow_pause">Allow pause</string>
    <string name="player_status">Player status</string>
    <string name="not_loaded">Not loaded</string>
    <string name="skip_banner">skip banner</string>
    <string name="skip_all">skip all</string>
    <string name="cta">cta</string>
    <string name="ad_video_controls">Ad video controls</string>
    <string name="ad_audio_controls">Ad audio controls</string>
    <string name="play">play</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="stop">stop</string>
    <string name="preroll">preroll</string>
    <string name="pauseroll">pauseroll</string>
    <string name="midroll">midroll</string>
    <string name="postroll">postroll</string>
    <string name="rewarded_ads">Rewarded</string>
    <string name="rewarded_ads_desc">Rewarded video banners</string>
    <string name="promo_video_2">Video promo (new style)</string>
    <string name="adaptive">Adaptive</string>
    <string name="adaptive_xml">Adaptive (xml)</string>
    <string name="loading">Loading…</string>
    <string name="error_msg">Ad wasn\'t loaded, message: %8s</string>
    <string name="mytracker_app_key">66039511634340742311</string>

    <string name="ad_close_mode">Ad close mode</string>
    <string name="dont_use_default_by_sdk">Don\'t use adChoices option listener(default by sdk)</string>
    <string name="auto_close_by_sdk">Auto close (by sdk)</string>
    <string name="close_by_developer">Close by developer</string>
    <string name="show_custom_adchoices_options_menu">Show custom adChoices options menu</string>
    <string name="use_custom_adchoices_view">Use custom adChoices view</string>
</resources>
