<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_cancel"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:text="Advertisement type" />

            <RadioGroup
                android:id="@+id/rg_choose_ad"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:showIn="@layout/fragment_dialog">

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_banner_320x50"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adtype_banner_320x50" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_banner_300x250"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adtype_banner_300x250" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_banner_728x90"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/adtype_banner_728x90_dis" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_banner_adaptive"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adtype_banner_adaptive_dis" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_interstitial"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/interstitial_ads" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_rewarded"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rewarded_ads" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_native"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adtype_native" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_native_configurations"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adtype_native_configurations" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_native_banner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/adtype_native_banner" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_instream"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/instream_ads" />

                <androidx.appcompat.widget.AppCompatRadioButton
                    android:id="@+id/adtype_audio_instream"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/audio_instream_ads" />

            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="slot id">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="number" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Params"
                app:endIconMode="clear_text">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_params"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:inputType="text" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_ok"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/ok"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_ok" />
</androidx.constraintlayout.widget.ConstraintLayout>


