<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                     xmlns:app="http://schemas.android.com/apk/res-auto"
                                                     xmlns:tools="http://schemas.android.com/tools"
                                                     android:layout_width="match_parent"
                                                     android:layout_height="match_parent"
                                                     tools:context=".activities.BannersActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout="@layout/activity_banners"
        android:id="@+id/content_banner">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_banner_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin_radio_title"
            android:layout_marginStart="@dimen/margin_radio_title"
            android:text="@string/banner_size"
            android:textAlignment="gravity"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_size"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_banner_size">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_320x50"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_320x50" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_300x250"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_300x250" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_728x90"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_728x90" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_adaptive"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adaptive" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_adaptive_xml"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/adaptive_xml" />

        </RadioGroup>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gointerstitial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/show"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rg_size" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/banner_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/white"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_fish"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </androidx.recyclerview.widget.RecyclerView>
    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>