<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.NativeAdActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/natives_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/content_padding"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:layout="@layout/activity_natives">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_ad_close_mode"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_radio_title"
            android:layout_marginLeft="@dimen/margin_radio_title"
            android:gravity="center_horizontal"
            android:text="@string/ad_close_mode"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <RadioGroup
            android:id="@+id/rg_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_ad_close_mode">

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_dont_use_options_listener"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/dont_use_default_by_sdk" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_auto_close"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/auto_close_by_sdk" />

            <androidx.appcompat.widget.AppCompatRadioButton
                android:id="@+id/rbt_close_by_developer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/close_by_developer" />

        </RadioGroup>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_gonative"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/show"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cb_draw_adchoices_options" />

        <CheckBox
            android:id="@+id/cb_use_custom_adchoices_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/use_custom_adchoices_view"
            app:layout_constraintStart_toStartOf="@+id/rg_content"
            app:layout_constraintTop_toBottomOf="@+id/rg_content" />

        <CheckBox
            android:id="@+id/cb_draw_adchoices_options"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_custom_adchoices_options_menu"
            app:layout_constraintStart_toStartOf="@+id/cb_use_custom_adchoices_view"
            app:layout_constraintTop_toBottomOf="@+id/cb_use_custom_adchoices_view" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:id="@+id/native_root_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/ic_launcher_background"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <ImageButton
            android:id="@+id/ib_adhcoices_icon"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            tools:ignore="RtlHardcoded" />

        <FrameLayout
            android:id="@+id/native_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/white"
            android:orientation="vertical"
            android:visibility="visible"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        </FrameLayout>
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:visibility="gone">

        <ProgressBar
            android:id="@+id/progress_bar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/loading"
            android:textSize="18sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.coordinatorlayout.widget.CoordinatorLayout>